# solitaire

./: CMakeLists.txt  README.md
src/: card.c  card.h  debug.h  main.c  pile.c  pile.h  pool.c  pool.h
